# xorg__app__compiz

./: Makefile.am  NEWS  compiz-0.pc.in  compiz-cube.pc.in  compiz-gconf.pc.in  compiz-kconfig.pc.in  compiz-scale.pc.in  configure.ac
include/: Makefile.am  compiz-core.h  compiz-cube.h  compiz-scale.h  compiz.h  decoration.h
include/compiz/: Makefile.am  box.h  branch.h  c-object.h  container.h  core.h  cube.h  delegate.h  error.h  file-descriptor.h  input.h  keyboard.h  macros.h  marshal.h  object.h  output.h  p-object.h  plugin.h  pointer.h  privates.h  prop.h  root.h  scale.h  signal-arg-map.h  signal-match.h  timer.h  types.h  widget.h
libdecoration/: decoration.c
metadata/: Makefile.am  annotate.xml.in  blur.xml.in  box.xml.in  clone.xml.in  core.xml.in  cube.xml.in  display.xml.in  fade.xml.in  fuse.xml.in  glx.xml.in  metadata.xml.in  minimize.xml.in  object.xml.in  org.compiz.box.xml.in  org.compiz.core.xml.in  org.compiz.display.xml.in  org.compiz.metadata.xml.xml.in  org.compiz.object.xml.in  org.compiz.screen.xml.in  org.compiz.signalMatch.keyEvent.xml.in  org.compiz.window.xml.in  place.xml.in  properties.xml.in  scale.xml.in  schemas.xslt  screen.xml.in  screenshot.xml.in  svg.xml.in  switcher.xml.in  version.xml.in  video.xml.in  water.xml.in  wm.xml.in  wobbly.xml.in  zoom.xml.in
plugins/: Makefile.am  annotate.c  blur.c  clone.c  compiz.schemas.in  cube.c  dbus.c  decoration.c  fade.c  fuse.c  gconf-dump.c  gconf.c  glib.c  glx.c  ini.c  inotify.c  kconfig.cpp  minimize.c  move.c  obs.c  place.c  plane.c  png.c  regex.c  resize.c  rotate.c  scale.c  screenshot.c  svg.c  switcher.c  video.c  water.c  wm.c  wobbly.c  xml-metadata.c  zoom.c
po/: af.po  ar.po  bg.po  bn.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  et.po  fi.po  fr.po  (+36 more)
src/: Makefile.am  box.c  branch.c  c-object.c  container.c  core.c  cursor.c  delegate.c  display.c  error.c  event.c  file-descriptor.c  fragment.c  input.c  keyboard.c  main.c  marshal.c  match.c  matrix.c  metadata.c  object.c  option.c  option.cpp  output.c  p-object.c  paint.c  plugin.c  pointer.c  privates.c  prop.c  root.c  screen.c  session.c  signal-arg-map.c  signal-match.c  texture.c  timer.c  widget.c  window.c
(+7 files in other folders)
