compizsubincludedir=$(includedir)/compiz-0/compiz
compizsubinclude_HEADERS = \
	types.h		   \
	privates.h	   \
	error.h		   \
	object.h	   \
	c-object.h	   \
	root.h		   \
	branch.h	   \
	container.h	   \
	prop.h		   \
	input.h		   \
	output.h	   \
	pointer.h	   \
	keyboard.h	   \
	plugin.h	   \
	core.h		   \
	cube.h		   \
	scale.h
