compizsubincludedir=$(includedir)/compiz-0/compiz
compizsubinclude_HEADERS = \
	types.h		   \
	privates.h	   \
	error.h		   \
	object.h	   \
	c-object.h	   \
	p-object.h	   \
	signal-arg-map.h   \
	signal-match.h	   \
	delegate.h	   \
	timer.h		   \
	file-descriptor.h  \
	root.h		   \
	branch.h	   \
	box.h		   \
	prop.h		   \
	input.h		   \
	output.h	   \
	pointer.h	   \
	keyboard.h	   \
	plugin.h	   \
	core.h		   \
	cube.h		   \
	scale.h
